@@ -1,3 +1,10 @@
+2004-05-06  Daniel Jacobowitz  <dan@debian.org>
+
+	* Makefile.am (DIST_SUBDIRS): Define.
+	* aclocal.m4: Regenerate with automake 1.8.4.
+	* Makefile.in: Likewise.
+	* doc/Makefile.in: Likewise.
+
 2004-05-06  David Mosberger-Tang  <davidm@hpl.hp.com>
 
 	* config/tc-ia64.c (dot_serialize): Declare.
